--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     body {
-      background-image: url("../Kamogelo/c3cff2a8c988e7819de71d72e952797a.jpg");
+      background-image: url("c3cff2a8c988e7819de71d72e952797a.jpg");
       background-size: cover;
       background-repeat: no-repeat;
 
