--- a/AboutUs.html
+++ b/AboutUs.html
@@ -12,7 +12,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About Us -Glamour House</title>
-<link rel="stylesheet" href="../Kamogelo/CSS.css">
+<link rel="stylesheet" href="CSS.css">
 </head>
 <body>
 
