--- a/AboutUs.html
+++ b/AboutUs.html
@@ -20,7 +20,7 @@
   <nav>
     <ul>
       <li><a href="../Kamogelo/Business Web.html">Home</a></li>
-      <li><a href="../Kamogelo/AboutUs.html">About Us</a></li>
+      <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="../Kamogelo/Services.html">Services</a></li>
       <li><a href="../Kamogelo/Gallery.html">Gallery</a></li>
       <li><a href="../Kamogelo/Contacts.html">Contact</a></li>
