--- a/AboutUs.html
+++ b/AboutUs.html
@@ -19,7 +19,7 @@
 <header>
   <nav>
     <ul>
-      <li><a href="../Kamogelo/Business Web.html">Home</a></li>
+      <li><a href="Business Web.html">Home</a></li>
       <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="../Kamogelo/Services.html">Services</a></li>
       <li><a href="../Kamogelo/Gallery.html">Gallery</a></li>
