--- a/AboutUs.html
+++ b/AboutUs.html
@@ -23,7 +23,7 @@
       <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="../Kamogelo/Services.html">Services</a></li>
       <li><a href="../Kamogelo/Gallery.html">Gallery</a></li>
-      <li><a href="../Kamogelo/Contacts.html">Contact</a></li>
+      <li><a href="Contacts.html">Contact</a></li>
     </ul>
   </nav>
 </header>
