--- a/AboutUs.html
+++ b/AboutUs.html
@@ -21,7 +21,7 @@
     <ul>
       <li><a href="Business Web.html">Home</a></li>
       <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="../Kamogelo/Services.html">Services</a></li>
+      <li><a href="Services.html">Services</a></li>
       <li><a href="Gallery.html">Gallery</a></li>
       <li><a href="Contacts.html">Contact</a></li>
     </ul>
