--- a/Business Web.html
+++ b/Business Web.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     body {
-      background-image: url("../Kamogelo/fenty2.webp");
+      background-image: url("fenty2.webp");
       
     }
   </style>
