--- a/Business Web.html
+++ b/Business Web.html
@@ -10,7 +10,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Makeup Glamour</title>
-<link rel="stylesheet" href="../Kamogelo/CSS.css">
+<link rel="stylesheet" href="CSS.css">
 </head>
 <body>
     
