--- a/Business Web.html
+++ b/Business Web.html
@@ -19,7 +19,7 @@
     <ul>
       <li><a href="../Kamogelo/Business Web.html">Home</a></li>
       <li><a href="../Kamogelo/AboutUs.html">About Us</a></li>
-      <li><a href="../Kamogelo/Services.html">Services</a></li>
+      <li><a href="Services.html">Services</a></li>
       <li><a href="../Kamogelo/Gallery.html">Gallery</a></li>
       <li><a href="../Kamogelo/Contacts.html">Contact</a></li>
     </ul>
