--- a/Contacts.html
+++ b/Contacts.html
@@ -16,7 +16,7 @@
 <header>
   <nav>
     <ul>
-      <li><a href="../Kamogelo/Business Web.html">Home</a></li>
+      <li><a href="Business Web.html">Home</a></li>
       <li><a href="../Kamogelo/AboutUs.html">About Us</a></li>
       <li><a href="Services.html">Services</a></li>
       <li><a href="../Kamogelo/Gallery.html">Gallery</a></li>
