--- a/Gallery.html
+++ b/Gallery.html
@@ -43,7 +43,7 @@ div.desc {
       <li><a href="../Kamogelo/AboutUs.html">About Us</a></li>
       <li><a href="Services.html">Services</a></li>
       <li><a href="../Kamogelo/Gallery.html">Gallery</a></li>
-      <li><a href="../Kamogelo/Contacts.html">Contact</a></li>
+      <li><a href="Contacts.html">Contact</a></li>
     </ul>
   </nav>
 </header>
