--- a/Contacts.html
+++ b/Contacts.html
@@ -19,7 +19,7 @@
       <li><a href="Business Web.html">Home</a></li>
       <li><a href="../Kamogelo/AboutUs.html">About Us</a></li>
       <li><a href="Services.html">Services</a></li>
-      <li><a href="../Kamogelo/Gallery.html">Gallery</a></li>
+      <li><a href="Gallery.html">Gallery</a></li>
       <li><a href="Contacts.html">Contact</a></li> 
     </ul>
   </nav>
