--- a/Contacts.html
+++ b/Contacts.html
@@ -17,7 +17,7 @@
   <nav>
     <ul>
       <li><a href="Business Web.html">Home</a></li>
-      <li><a href="../Kamogelo/AboutUs.html">About Us</a></li>
+      <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="Services.html">Services</a></li>
       <li><a href="Gallery.html">Gallery</a></li>
       <li><a href="Contacts.html">Contact</a></li> 
