--- a/Business Web.html
+++ b/Business Web.html
@@ -21,7 +21,7 @@
       <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="Services.html">Services</a></li>
       <li><a href="Gallery.html">Gallery</a></li>
-      <li><a href="../Kamogelo/Contacts.html">Contact</a></li>
+      <li><a href="Contacts.html">Contact</a></li>
     </ul>
   </nav>
 </header>
