--- a/Gallery.html
+++ b/Gallery.html
@@ -31,7 +31,7 @@ div.desc {
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gallery -Glamour House</title>
-<link rel="stylesheet" href="../Kamogelo/CSS.css">
+<link rel="stylesheet" href="CSS.css">
 <script src="script.js" defer></script>
 </head>
 <body>
