--- a/Gallery.html
+++ b/Gallery.html
@@ -52,8 +52,8 @@ div.desc {
   <section class="gallery">
     <h2>Gallery</h2>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/G1.jfif">
-      <img src="../Kamogelo/G1.jfif" alt="Gallery Image 1" width="250" height="300">
+      <a target="_blank" href="G1.jfif">
+      <img src="G1.jfif" alt="Gallery Image 1" width="250" height="300">
     </a>
     <div class="desc">The Soft Glam look.</div>
     </div>
