--- a/Gallery.html
+++ b/Gallery.html
@@ -58,8 +58,8 @@ div.desc {
     <div class="desc">The Soft Glam look.</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/G13.jfif">
-      <img src="../Kamogelo/G13.jfif" alt="Gallery Image 2" width="250" height="200">
+      <a target="_blank" href="G13.jfif">
+      <img src="G13.jfif" alt="Gallery Image 2" width="250" height="200">
       </a>
   <div class="desc">Hybrid Lashes</div>
   </div>
