--- a/Gallery.html
+++ b/Gallery.html
@@ -64,8 +64,8 @@ div.desc {
   <div class="desc">Hybrid Lashes</div>
   </div>
   <div class="gallery">
-    <a target="_blank" href="../Kamogelo/G5.jfif">
-      <img src="../Kamogelo/G5.jfif" alt="Gallery Image 3" width="250" height="300">
+    <a target="_blank" href="G5.jfif">
+      <img src="G5.jfif" alt="Gallery Image 3" width="250" height="300">
       </a>
   <div class="desc">Soft Glam</div>
   </div>
