--- a/Gallery.html
+++ b/Gallery.html
@@ -70,8 +70,8 @@ div.desc {
   <div class="desc">Soft Glam</div>
   </div>
   <div class="gallery">
-    <a target="_blank" href="../Kamogelo/G9.jfif">
-      <img src="../Kamogelo/G9.jfif" alt="Gallery Image 4" width="250" height="300">
+    <a target="_blank" href="G9.jfif">
+      <img src="G9.jfif" alt="Gallery Image 4" width="250" height="300">
       </a>
   <div class="desc">The FaceBeat</div>
   </div>
