--- a/Gallery.html
+++ b/Gallery.html
@@ -76,8 +76,8 @@ div.desc {
   <div class="desc">The FaceBeat</div>
   </div>
   <div class="gallery">
-    <a target="_blank" href="../Kamogelo/G8.jfif">
-      <img src="../Kamogelo/G8.jfif" alt="Gallery Image 5" width="250" height="300">
+    <a target="_blank" href="G8.jfif">
+      <img src="G8.jfif" alt="Gallery Image 5" width="250" height="300">
       </a>
   <div class="desc">Matric Dance Glam</div>
   </div>
