--- a/Gallery.html
+++ b/Gallery.html
@@ -82,8 +82,8 @@ div.desc {
   <div class="desc">Matric Dance Glam</div>
   </div>
   <div class="gallery"></div>
-  <a target="_blank" href="../Kamogelo/G2.jfif">
-      <img src="../Kamogelo/G2.jfif" alt="Gallery Image 6" width="250" height="300">
+  <a target="_blank" href="G2.jfif">
+      <img src="G2.jfif" alt="Gallery Image 6" width="250" height="300">
       </a>
   <div class="desc">Bridal Glam</div>
   </div>
