--- a/Gallery.html
+++ b/Gallery.html
@@ -88,8 +88,8 @@ div.desc {
   <div class="desc">Bridal Glam</div>
   </div>
   <div class="gallery">
-    <a target="_blank" href="../Kamogelo/G3.jfif">
-      <img src="../Kamogelo/G3.jfif" alt="Gallery Image 7" width="250" height="300">
+    <a target="_blank" href="G3.jfif">
+      <img src="G3.jfif" alt="Gallery Image 7" width="250" height="300">
     </a>
     <div class="desc">FaceBeat</div>
     </div>
