--- a/Gallery.html
+++ b/Gallery.html
@@ -94,8 +94,8 @@ div.desc {
     <div class="desc">FaceBeat</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/G4.jfif">
-      <img src="../Kamogelo/G4.jfif" alt="Gallery Image 8" width="250" height="300">
+      <a target="_blank" href="G4.jfif">
+      <img src="G4.jfif" alt="Gallery Image 8" width="250" height="300">
     </a>
     <div class="desc">Natural Glam</div>
     </div>
