--- a/Gallery.html
+++ b/Gallery.html
@@ -100,8 +100,8 @@ div.desc {
     <div class="desc">Natural Glam</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/primer.jpg">
-      <img src="../Kamogelo/primer.jpg" alt="Gallery Image 9" width="250" height="300">
+      <a target="_blank" href="primer.jpg">
+      <img src="primer.jpg alt="Gallery Image 9" width="250" height="300">
     </a>
     <div class="desc">Primer</div>
     </div>
