--- a/Gallery.html
+++ b/Gallery.html
@@ -106,8 +106,8 @@ div.desc {
     <div class="desc">Primer</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/podwe foundation.jpg">
-      <img src="../Kamogelo/podwe foundation.jpg" alt="Gallery Image 10" width="250" height="300">
+      <a target="_blank" href="podwe foundation.jpg">
+      <img src="podwe foundation.jpg" alt="Gallery Image 10" width="250" height="300">
     </a>
     <div class="desc">Powder Foundation</div>
     </div>
