--- a/Gallery.html
+++ b/Gallery.html
@@ -112,8 +112,8 @@ div.desc {
     <div class="desc">Powder Foundation</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/bronze.jpg">
-      <img src="../Kamogelo/bronze.jpg" alt="Gallery Image 11" width="250" height="300">
+      <a target="_blank" href="bronze.jpg">
+      <img src="bronze.jpg" alt="Gallery Image 11" width="250" height="300">
     </a>
     <div class="desc">Bronzer</div>
     </div>
