--- a/Gallery.html
+++ b/Gallery.html
@@ -118,8 +118,8 @@ div.desc {
     <div class="desc">Bronzer</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/lipstick.jpg">
-      <img src="../Kamogelo/lipstick.jpg" alt="Gallery Image 12" width="250" height="300">
+      <a target="_blank" href="lipstick.jpg">
+      <img src="lipstick.jpg" alt="Gallery Image 12" width="250" height="300">
     </a>
     <div class="desc">Lipstick</div>
     </div>
