--- a/Gallery.html
+++ b/Gallery.html
@@ -124,8 +124,8 @@ div.desc {
     <div class="desc">Lipstick</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/Mac founation.jpg">
-      <img src="../Kamogelo/Mac founation.jpg" alt="Gallery Image 13" width="250" height="300">
+      <a target="_blank" href="Mac founation.jpg">
+      <img src="Mac founation.jpg" alt="Gallery Image 13" width="250" height="300">
     </a>
     <div class="desc">Liquid Foundation</div>
     </div>
