--- a/Gallery.html
+++ b/Gallery.html
@@ -130,8 +130,8 @@ div.desc {
     <div class="desc">Liquid Foundation</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/mascara.jpg">
-      <img src="../Kamogelo/mascara.jpg" alt="Gallery Image 14" width="250" height="300">
+      <a target="_blank" href="mascara.jpg">
+      <img src="mascara.jpg" alt="Gallery Image 14" width="250" height="300">
     </a>
     <div class="desc">Mascara</div>
     </div>
