--- a/Gallery.html
+++ b/Gallery.html
@@ -142,8 +142,8 @@ div.desc {
     <div class="desc">Lip-Gloss</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/eyeshadow.jpg">
-      <img src="../Kamogelo/eyeshadow.jpg" alt="Gallery Image 16" width="250" height="300">
+      <a target="_blank" href="eyeshadow.jpg">
+      <img src="eyeshadow.jpg" alt="Gallery Image 16" width="250" height="300">
     </a>
     <div class="desc">Eyeshadow</div>
     </div>
