--- a/Gallery.html
+++ b/Gallery.html
@@ -136,8 +136,8 @@ div.desc {
     <div class="desc">Mascara</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/Lip-Gloss_Hero.webp">
-      <img src="../Kamogelo/Lip-Gloss_Hero.webp" alt="Gallery Image 15" width="250" height="300">
+      <a target="_blank" href="Lip-Gloss_Hero.webp">
+      <img src="Lip-Gloss_Hero.webp" alt="Gallery Image 15" width="250" height="300">
     </a>
     <div class="desc">Lip-Gloss</div>
     </div>
