--- a/Gallery.html
+++ b/Gallery.html
@@ -148,8 +148,8 @@ div.desc {
     <div class="desc">Eyeshadow</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/nyx-matte-finish-fini-mat-setting-spray-1498556993.jpg">
-      <img src="../Kamogelo/nyx-matte-finish-fini-mat-setting-spray-1498556993.jpg" alt="Gallery Image 17" width="250" height="300">
+      <a target="_blank" href="nyx-matte-finish-fini-mat-setting-spray-1498556993.jpg">
+      <img src="nyx-matte-finish-fini-mat-setting-spray-1498556993.jpg" alt="Gallery Image 17" width="250" height="300">
     </a>
     <div class="desc">Setting-Spray</div>
     </div>
