--- a/Gallery.html
+++ b/Gallery.html
@@ -154,8 +154,8 @@ div.desc {
     <div class="desc">Setting-Spray</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/R.jpg">
-      <img src="../Kamogelo/R.jpg" alt="Gallery Image 18" width="250" height="300">
+      <a target="_blank" href="R.jpg">
+      <img src="R.jpg" alt="Gallery Image 18" width="250" height="300">
     </a>
     <div class="desc">Concealer</div>
     </div>
