--- a/Gallery.html
+++ b/Gallery.html
@@ -160,8 +160,8 @@ div.desc {
     <div class="desc">Concealer</div>
     </div>
     <div class="gallery">
-      <a target="_blank" href="../Kamogelo/83707_BakedHighlighter_037AA.jpg">
-      <img src="../Kamogelo/83707_BakedHighlighter_037AA.jpg" alt="Gallery Image `19" width="250" height="300">
+      <a target="_blank" href="83707_BakedHighlighter_037AA.jpg">
+      <img src="83707_BakedHighlighter_037AA.jpg" alt="Gallery Image `19" width="250" height="300">
     </a>
     <div class="desc">Highlighter</div>
     </div>
