--- a/Gallery.html
+++ b/Gallery.html
@@ -101,7 +101,7 @@ div.desc {
     </div>
     <div class="gallery">
       <a target="_blank" href="primer.jpg">
-      <img src="primer.jpg alt="Gallery Image 9" width="250" height="300">
+      <img src="primer.jpg"alt="Gallery Image 9" width="250" height="300">
     </a>
     <div class="desc">Primer</div>
     </div>
